--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -44,13 +44,12 @@ body{
     animation:hide 0.5s linear normal 1 forwards;
 }
 .preloader_loader{
-    margin:0 auto;
     width:5em;
     height:5em;
     
     border-width:5px;
     border-style:solid;
-    border-color: #696969 #fff #fff #fff;
+    border-color: #757575 #fff #fff #fff;
     
     border-radius:50%;
     animation:spin 2s linear infinite;
@@ -59,8 +58,7 @@ body{
 .preloader_text{
     font-size:1.4rem;
     margin-top:1em;
-    color:#fff;
-    
+    color:#D2D4D5;
 }
 
 /* spin the preloader */
@@ -108,7 +106,6 @@ h1{
     display:flex;
     justify-content:space-evenly;
     align-items:center;
-   
 }
 .global h2{
     margin-bottom:0.5em;
@@ -132,8 +129,8 @@ h1{
     display:flex;
     align-items:center;
     width:90%;
-    gap:2em;
-    align-items:center;
+    gap:1em;
+    
     margin:2em auto;
 }
 
@@ -142,7 +139,7 @@ h1{
     border:1px solid #999;
     color:#fff;
     height:2.5em;
-    padding-inline:0.5em;
+    padding-inline:0.3em;
     border-radius:3px;
 }
 
@@ -153,7 +150,7 @@ h1{
     width:50%;
 }
 .search-input select option{
-    color:#111;
+    color:#252525;
 }
 /* table****************** */
 table{
@@ -174,6 +171,8 @@ table th , table td{
     border:1px solid #696969;
 }
 
+
+
 table tbody {
     background-color:#353636;
 }
@@ -192,9 +191,12 @@ table > tbody > tr > td img{
     position:fixed;
     right:0;
     bottom:0;
-    z-index:-1;
+    visibility:hidden;
 }
 
+.arrow-hide{
+    visibility:visible;
+}
 .up-arrow,.down-arrow{
     position: relative;
     cursor: pointer;
